<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SelectAndEditCollage"
    android:background="@color/gray">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSelectGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient_toolbar"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        app:buttonGravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:title="@string/txt_select_grid"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/txtDone"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/txt_bg_white"
        android:text="@string/txt_done"
        android:gravity="center"
        android:visibility="visible"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarSelectGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSave"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/txt_bg_white"
        android:text="@string/txt_save"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarSelectGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        android:layout_marginBottom="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSelectGrid" />

    <FrameLayout
        android:id="@+id/parentGrids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#000000"
        android:alpha="0.8"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>