<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.CollageMaker">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient_toolbar"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        app:buttonGravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:title="@string/txt_select"
        app:titleTextColor="@color/white" />

    <ImageButton
        android:id="@+id/btnCamera"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/txt_bg"
        android:contentDescription="@string/nav_open"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintEnd_toStartOf="@+id/folderRecView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/folderRecView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCamera"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/txtNext"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/txt_bg_white"
        android:text="@string/txt_next"
        android:visibility="invisible"
        android:gravity="center"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collageImagesRecView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folderRecView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentSelectedImages"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="13dp"
        android:background="#000000"
        android:alpha="0.8"
        android:layout_marginEnd="13dp"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtSelectedImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/selectedImgRecView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectedImgRecView"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>