<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawarlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.DashBoard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:background="@drawable/dashboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_toolbar"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
                    app:buttonGravity="center_vertical"
                    app:navigationIcon="@drawable/ic_baseline_menu_24"
                    app:title="@string/Dashboard"
                    app:titleTextColor="@color/white" />

                <FrameLayout
                    android:id="@+id/cont"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.194">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_alternates_medium"
                    android:text="@string/go_ahead"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_arrow_drop_down" />


                <TextView
                    android:id="@+id/btncollage"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/txt_bg"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/txtCollage"
                    android:textColor="@color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnsquare"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/txt_bg"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:text="@string/sqaure_fit"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/btnblur"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/txt_bg"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:text="Blur Background"
                        android:textColor="@color/white" />


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/recentFile_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Recent Files"
                android:textColor="@color/brown"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutbutton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recentRV"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/txt_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recentFile_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Native Ad"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_View"
        app:menu="@menu/item_menu"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="start"
        app:itemIconTint="@color/pink"
        app:itemTextColor="@color/white"
        android:backgroundTint="@color/black"
        android:fitsSystemWindows="true"
        />
</androidx.drawerlayout.widget.DrawerLayout>